add path to page all topic

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -10,6 +10,6 @@
 
   <li class="list-group-item"><a href="#">Home</a></li>
   <li class="list-group-item"><a href="#">All redactor</a></li>
-  <li class="list-group-item"><a href="#">All topic</a></li>
+  <li class="list-group-item"><a href="{% url 'newspaper:topics-list' %}">All topic</a></li>
   <li class="list-group-item"><a href="#">All newspaper</a></li>
 </ul>
