--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -8,7 +8,7 @@
 
   <br>
 
-  <li class="list-group-item"><a href="#">Home</a></li>
+  <li class="list-group-item"><a href="{% url 'newspaper:index' %}">Home</a></li>
   <li class="list-group-item"><a href="#">All redactor</a></li>
   <li class="list-group-item"><a href="{% url 'newspaper:topics-list' %}">All topic</a></li>
   <li class="list-group-item"><a href="#">All newspaper</a></li>
