--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -9,7 +9,7 @@
   <br>
 
   <li class="list-group-item"><a href="{% url 'newspaper:index' %}">Home</a></li>
-  <li class="list-group-item"><a href="#">All redactor</a></li>
+  <li class="list-group-item"><a href="{% url 'newspaper:redactors-list' %}">All redactor</a></li>
   <li class="list-group-item"><a href="{% url 'newspaper:topics-list' %}">All topic</a></li>
   <li class="list-group-item"><a href="{% url 'newspaper:newspapers-list' %}">All newspaper</a></li>
 </ul>
