--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,9 @@
     <div class="col-sm-10 ">
 
       {% block content %}{% endblock %}
-
+      {% block pagination %}
+        {% include "includes/pagination.html" %}
+      {% endblock %}
 
     </div>
   </div>
