add the url topics-detail

--- a/templates/newspaper/topic_list.html
+++ b/templates/newspaper/topic_list.html
@@ -4,18 +4,16 @@
   <title>Topic List</title>
 {% endblock %}
 
-
-
 {% block content %}
-    <h1>Topic List</h1>
-  {% if topic_list %} 
-  <ul>
-  {% for topic in topic_list %}
-  <li>{{ topic.name }}</li>
-  {% endfor %}
-  </ul>
+  <h1>Topic List</h1>
+  {% if topic_list %}
+    <ul>
+      {% for topic in topic_list %}
+        <li><a href="{% url 'newspaper:topics-detail' topic.id %}">{{ topic.name }}</a></li>
+      {% endfor %}
+    </ul>
   {% else %}
-  <p>There are no topic in newspaper agency</p>
+    <p>There are no topic in newspaper agency</p>
   {% endif %}
 {% endblock %}
 
