--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,9 +1,14 @@
 <ul class="sidebar-nav list-group">
   {% if user.is_authenticated %}
-    <li class="list-group-item">User: <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>
-    <li class="list-group-item"><a href="#">Logout</a></li>
+    <li class="list-group-item">User: {{ user.get_username }}</li>
+    <li class="list-group-item">
+      <form  action = "{% url 'logout' %}"  method="POST" >
+        {% csrf_token %}
+      <button  class="btn-primary" type = "submit" >Logout</button> 
+      </form>
+    </li>
   {% else %}
-    <li class="list-group-item"><a href="#">Login</a></li>
+    <li class="list-group-item"><a href="{% url 'login' %}">Login</a></li>
   {% endif %}
 
   <br>
