add url and button Create

--- a/templates/newspaper/newspaper_list.html
+++ b/templates/newspaper/newspaper_list.html
@@ -6,14 +6,19 @@
 
 {% block content %}
 
-  <h1>Newspaper List</h1>
+  <h1>
+    Newspaper List
+    <a href="{% url 'newspaper:newspapers-create' %}" class="btn btn-primary link-to-page">
+      Create
+    </a>
+  </h1>
   {% if newspaper_list %}
     <ul>
 
       {% for newspaper in newspaper_list %}
         <li>
-        <p><a href="{% url 'newspaper:newspaper-detail' newspaper.id %}">{{ newspaper.title }}</a></p>
-          
+        <p><a href="{% url 'newspaper:newspapers-detail' newspaper.id %}">{{ newspaper.title }}</a></p>
+
       {% endfor %}
       </li>
     </ul>
@@ -22,4 +27,3 @@
   {% endif %}
 
 {% endblock %}
-
