--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
   <form action="{% url "login" %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-  <input type="submit" value="Submit">
+  <input type="submit" value="Login" class="btn btn-primary" />
   <input type="hidden" name="next" value="{{ next }}">
   </form>
 {% endblock %}
