--- a/templates/newspaper/newspaper_form.html
+++ b/templates/newspaper/newspaper_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>Create Newspaper</h1>
+  <h1>{{ object|yesno:"Update,Create" }} Newspaper</h1>
   <form action="" method="post" novalidate>
   {% csrf_token %}
     {{ form|crispy }}
