--- a/templates/newspaper/redactor_list.html
+++ b/templates/newspaper/redactor_list.html
@@ -10,18 +10,41 @@
   <h1>
     Redactor List
     <a href="{% url 'newspaper:redactors-create' %}" class="btn btn-primary link-to-page">
-      Create
+      Create Redactor
     </a>
   </h1>
   {% if redactor_list %}
-    <ul>
+    <table class="table">
+    <tr>
+    <th>ID</th>
+    <th>Username</th>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Years of Experience</th>
+    <th>Update</th>
+    <th>Delete</th>
+    </tr>
       {% for redactor in redactor_list %}
-        <li><a href="{% url 'newspaper:redactors-detail' redactor.id %}">
-          {{ redactor.username }}:</a>({{ redactor.first_name }}
-          {{ redactor.last_name }} - {{ redactor.years_of_experience }})
-        </li>
+        <tr>
+          <td>{{ redactor.id }}</td>
+          <td><a href="{% url 'newspaper:redactors-detail' redactor.id %}">
+          {{ redactor.username }}{% if user == redactor %} (Me){% endif %}</a></td>
+          <td>{{ redactor.first_name }}</td>
+          <td>{{ redactor.last_name }}</td>
+          <td>{{ redactor.years_of_experience }}</td>
+          <td>
+            <a href="{% url 'newspaper:redactors-update' pk=redactor.id %}">
+              Update
+            </a>
+          </td>
+          <td>
+            <a style="color: red" href="{% url 'newspaper:redactors-delete' pk=redactor.id %}">
+              Delete
+            </a>
+          </td>
+        
       {% endfor %}
-    </ul>
+    </table>
   {% else %}
     <p>There are no redactor in newspaper agency</p>
   {% endif %}
