--- a/templates/newspaper/topic_list.html
+++ b/templates/newspaper/topic_list.html
@@ -8,16 +8,30 @@
   <h1>
     Topic List
     <a href="{% url 'newspaper:topics-create' %}" class="btn btn-primary link-to-page">
-      Create
+      Create New Topic
     </a>
 
   </h1>
   {% if topic_list %}
-    <ul>
+    <table class="table">
+    <tr>
+      <th>ID</th>
+      <th>Topic Name</th>
+      <th>Update</th>
+      <th>Delete</th>
+    </tr>
+    
+    
       {% for topic in topic_list %}
-        <li><a href="{% url 'newspaper:topics-detail' topic.id %}">{{ topic.name }}</a></li>
+        <tr>
+        <td>{{ topic.id }}</td>
+          <td><a href="{% url 'newspaper:topics-detail' topic.id %}">{{ topic.name }}</a></td>
+          <td><a href="{% url 'newspaper:topics-update' pk=topic.id %}">Update</a></td>
+          <td><a style="color:red" href="{% url 'newspaper:topics-delete' pk=topic.id %}">Delete</a></td>
+        </tr>
+       
       {% endfor %}
-    </ul>
+</table>
   {% else %}
     <p>There are no topic in newspaper agency</p>
   {% endif %}
