--- a/templates/newspaper/newspaper_list.html
+++ b/templates/newspaper/newspaper_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_filters %}
 
 {% block title %}
   <title>Newspaper List</title>
@@ -12,24 +13,29 @@
       Create Newspaper
     </a>
   </h1>
+  <form method="get" action="" class="form-inline">
+    {{ search_form|crispy }}
+    <input class="btn btn-secondary" type="submit" value="🔍">
+  </form>
+  <br>
   {% if newspaper_list %}
     <table class="table">
       <tr>
-      <th>ID</th>
-      <th>Title</th>
-      <th>Published date</th>
-      <th>Update</th>
-      <th>Delete</th>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Published date</th>
+        <th>Update</th>
+        <th>Delete</th>
       </tr>
       {% for newspaper in newspaper_list %}
         <tr>
-        <td>{{ newspaper.id }}</td>
-        <td><a href="{% url 'newspaper:newspapers-detail' newspaper.id %}">{{ newspaper.title }}</a></td>
-        <td>{{ newspaper.published_date }}</td>
-        <td><a href="{% url 'newspaper:newspapers-update' newspaper.id %}">Update</a></td>
-        <td><a style="color:red" href="{% url 'newspaper:newspapers-delete' pk=newspaper.id %}">Delete</a></td>
+          <td>{{ newspaper.id }}</td>
+          <td><a href="{% url 'newspaper:newspapers-detail' newspaper.id %}">{{ newspaper.title }}</a></td>
+          <td>{{ newspaper.published_date }}</td>
+          <td><a href="{% url 'newspaper:newspapers-update' newspaper.id %}">Update</a></td>
+          <td><a style="color:red" href="{% url 'newspaper:newspapers-delete' pk=newspaper.id %}">Delete</a></td>
         </tr>
-        
+
       {% endfor %}
     </table>
   {% else %}
