--- a/templates/newspaper/redactor_list.html
+++ b/templates/newspaper/redactor_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_filters %}
 
 {% block title %}
   <title>Redactor List</title>
@@ -13,36 +14,41 @@
       Create Redactor
     </a>
   </h1>
+  <form method="get" action="" class="form-inline">
+    {{ search_form|crispy }}
+    <input class="btn btn-secondary" type="submit" value="🔍">
+  </form>
+  <br>
   {% if redactor_list %}
     <table class="table">
-    <tr>
-    <th>ID</th>
-    <th>Username</th>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Years of Experience</th>
-    <th>Update</th>
-    <th>Delete</th>
-    </tr>
+      <tr>
+        <th>ID</th>
+        <th>Username</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Years of Experience</th>
+        <th>Update</th>
+        <th>Delete</th>
+      </tr>
       {% for redactor in redactor_list %}
         <tr>
-          <td>{{ redactor.id }}</td>
-          <td><a href="{% url 'newspaper:redactors-detail' redactor.id %}">
+        <td>{{ redactor.id }}</td>
+        <td><a href="{% url 'newspaper:redactors-detail' redactor.id %}">
           {{ redactor.username }}{% if user == redactor %} (Me){% endif %}</a></td>
-          <td>{{ redactor.first_name }}</td>
-          <td>{{ redactor.last_name }}</td>
-          <td>{{ redactor.years_of_experience }}</td>
-          <td>
-            <a href="{% url 'newspaper:redactors-update' pk=redactor.id %}">
-              Update
-            </a>
-          </td>
-          <td>
-            <a style="color: red" href="{% url 'newspaper:redactors-delete' pk=redactor.id %}">
-              Delete
-            </a>
-          </td>
-        
+        <td>{{ redactor.first_name }}</td>
+        <td>{{ redactor.last_name }}</td>
+        <td>{{ redactor.years_of_experience }}</td>
+        <td>
+          <a href="{% url 'newspaper:redactors-update' pk=redactor.id %}">
+            Update
+          </a>
+        </td>
+        <td>
+          <a style="color: red" href="{% url 'newspaper:redactors-delete' pk=redactor.id %}">
+            Delete
+          </a>
+        </td>
+
       {% endfor %}
     </table>
   {% else %}
