--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,7 +1,47 @@
-{% extends "base.html" %}
+{% extends 'base_background.html' %}
+{% load static %}
+{% load crispy_forms_filters %}
+
+{% block title %} Login {% endblock title %}
+{% block body %} class="sign-in-basic" {% endblock body %}
+
+{% block header %}
+
+  {% include 'includes/navigation.html' %}
+
+{% endblock header %}
 
 {% block content %}
-<p>Logged out!</p>
 
-<a href="{% url 'login' %}">Click here to login again.</a>
-{% endblock %}
+  <div class="page-header align-items-start min-vh-100"
+       style="background-image: url('{% static 'img/bg13.jpg' %}')"
+       loading="lazy">
+    <span class="mask bg-gradient-dark opacity-6"></span>
+    <div class="container my-auto">
+      <div class="row">
+        <div class="col-lg-4 col-md-8 col-12 mx-auto">
+          <div class="card z-index-0 fadeIn3 fadeInBottom">
+            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+              <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
+                <h4 class="text-white font-weight-bolder text-center mt-0 mb-0">Logged out</h4>
+
+              </div>
+            </div>
+            <div class="card-body text-center" >
+              <a href="{% url 'login' %}">Click here to login again.</a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+{% endblock content %}
+
+{% block footer %}
+
+
+
+{% endblock footer %}
+
