--- a/templates/newspaper/redactor_detail.html
+++ b/templates/newspaper/redactor_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base_background.html' %}
 {% load custom_topic %}
-{% load сustom_newspaper %}
+{% load custom_newspaper %}
 {% load static %}
 {% block title %} Redactor Detail {% endblock title %}
 {% block body %} class="blog-author bg-gray-200" {% endblock body %}
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-12 mx-auto">
           <div class="mt-n8 mt-md-n6 text-center">
-            
+
           </div>
           <div class="row py-5">
             <div class="col-lg-7 col-md-7 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
@@ -86,7 +86,7 @@
         </div>
       </div>
     </div>
-  
+
   </section>
   </div>
 {% endblock content %}
