--- a/templates/newspaper/topic_detail.html
+++ b/templates/newspaper/topic_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base_background.html' %}
 {% load custom_redactor %}
-{% load сustom_newspaper %}
+{% load custom_newspaper %}
 {% load static %}
 {% block title %} Topic Detail {% endblock title %}
 {% block body %} class="blog-author bg-gray-200" {% endblock body %}
@@ -44,7 +44,7 @@
                       <p>No Newspaper</p>
                     {% endif %}
                   {% endwith %}
-                
+
               <div class="row mb-4">
                 <div class="col-auto">
                   <span>Redactors:</span>
@@ -55,14 +55,14 @@
                       <p>No Topic</p>
                     {% endif %}
                   {% endwith %}
-                </div>  
-                  
-                     
+                </div>
+
+
 
                 </div>
               </div>
 
-              
+
             </div>
           </div>
         </div>
