--- a/templates/newspaper/newspaper_detail.html
+++ b/templates/newspaper/newspaper_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base_background.html' %}
 {% load custom_publisher %}
 {% load custom_topic %}
-{% load сustom_newspaper %}
+{% load custom_newspaper %}
 {% load static %}
 {% block title %} Newspaper Detail {% endblock title %}
 {% block body %} class="blog-author bg-gray-200" {% endblock body %}
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-12 mx-auto">
           <div class="mt-n8 mt-md-n7 text-center">
-           
+
           </div>
           <div class="row py-5">
             <div class="col-lg-7 col-md-7 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
@@ -51,10 +51,10 @@
                 </div>
                   </div>
                 <div class="col-auto ">
-                  
+
                   <span>Content:</span>
                   <span class="h6">{{ newspaper.content }}</span>
-                
+
                 </div>
               </div>
               <div class="col-auto">
