--- a/templates/newspaper/topic_detail.html
+++ b/templates/newspaper/topic_detail.html
@@ -61,14 +61,12 @@
 
                 </div>
               </div>
-
-
             </div>
           </div>
         </div>
       </div>
     </div>
-  
+    </div>
   </section>
   </div>
 {% endblock content %}
