--- a/templates/newspaper/index.html
+++ b/templates/newspaper/index.html
@@ -14,11 +14,11 @@
   {% endblock header %}
 
 <header class="header-2">
-  <div class="page-header min-vh-80 relative" style="background-image: url('{% static 'img/bg-2.jpg' %}')">
+  <div class="page-header min-vh-80 relative" style="background-image: url('{% static 'img/header-bg.jpg' %}')">
     <span class="mask  opacity-4"></span>
     <div class="container">
       <div class="row">
-        <div class="col-lg-7 text-center mx-auto">
+        <div class="col-lg-7 text-center">
           <h1 class="pt-2 mt-n9" style="color: white">Welcome to the best Newspapers Agency! </h1>
           
         </div>
