--- a/templates/newspaper/newspaper_list.html
+++ b/templates/newspaper/newspaper_list.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %} Newspaper List {% endblock title %}
-{% block body %} style="background-image: url('{% static 'img/header-bg.jpg' %}'); background-size: cover; height: 100vh;
+{% block body %} style="background-image: url('{% static 'img/bg-2.jpg' %}'); background-size: cover; height: 100vh;
   margin: 0;"> {% endblock body %}
 
 {% block content %}
@@ -50,7 +50,7 @@
         </div>
       {% endfor %}
     {% else %}
-      <p>TThere are no newspaper in newspaper agency</p>
+      <h3 class="text-white text-left col-md-6 mb-4 mt-8">There are no newspaper</h3>
     {% endif %}
 
     </div>
