--- a/templates/newspaper/redactor_list.html
+++ b/templates/newspaper/redactor_list.html
@@ -57,7 +57,7 @@
         </div>
       {% endfor %}
     {% else %}
-      <p>There are no redactor in newspaper agency</p>
+      <h3 class="text-white text-left ">There are no redactor</h3>
     {% endif %}
 
     </div>
