--- a/templates/newspaper/topic_list.html
+++ b/templates/newspaper/topic_list.html
@@ -49,7 +49,7 @@
         </div>
       {% endfor %}
     {% else %}
-      <p>TThere are no topic in newspaper agency</p>
+      <h3 class="text-white text-left" >There are no topic</h3>
     {% endif %}
 
     </div>
